fix blockquote link visibility

--- a/themes/meghna-hugo/assets/css/custom.css
+++ b/themes/meghna-hugo/assets/css/custom.css
@@ -14,3 +14,11 @@ blockquote p {
 .post-single-content img {
   width: 100%;
 }
+
+blockquote a:link, blockquote a:visited {
+  color:#353b43;
+}
+
+blockquote a:hover, blockquote a:active {
+  color:#57cbcc;
+}
